--- a/coach.html
+++ b/coach.html
@@ -1,3 +1,8 @@
 <div>
-    Coach view
+    <div>
+        Coach View
+        <iframe src="https://www.youtube.com/watch?v=dQw4w9WgXcQ"></iframe>
+    </div>
+    <script type="text/javascript" src="./enums.js"></script>
+    <script type="text/javascript" src="./client.js"></script>
 </div>
