--- a/participant.html
+++ b/participant.html
@@ -1,3 +1,6 @@
 <div>
-    Code
+    <div>
+        <iframe src=></iframe>
+    </div>
+    <script type="text/javascript" src="./scripts.js"></script>
 </div>
