--- a/coach.html
+++ b/coach.html
@@ -1,8 +1,9 @@
 <div>
-    <div>
+    <div id="viewContent">
         Coach View
-        <iframe src="https://www.youtube.com/watch?v=dQw4w9WgXcQ"></iframe>
+        <div id="video"></div>
     </div>
+    <script src='https://meet.jit.si/external_api.js'></script>
     <script type="text/javascript" src="./enums.js"></script>
     <script type="text/javascript" src="./client.js"></script>
 </div>
