--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="./scripts.js"></script>
 
 <body>
-  <div id="content">
+  <div class="content" id="contentView">
     <h1>Welcome! Please Log In</h1>
     <div>
       Enter your name
