--- a/coach.html
+++ b/coach.html
@@ -1,9 +1,12 @@
-<div>
-    <div id="viewContent">
-        Coach View
-        <div id="video"></div>
+<link rel="stylesheet" href="./styles.css" />
+<div id="viewContent">
+    <div id="sidebar" class="sidebarAnimaton">
+        <div id="closeButton" onclick="setSidebarWidth()">
+            <img src="./assets/OriginalLogo-IncRED.png">
+        </div>
     </div>
-    <script src='https://meet.jit.si/external_api.js'></script>
-    <script type="text/javascript" src="./enums.js"></script>
-    <script type="text/javascript" src="./client.js"></script>
+    <div id="video"></div>
 </div>
+<script src='https://meet.jit.si/external_api.js'></script>
+<script type="text/javascript" src="./enums.js"></script>
+<script type="text/javascript" src="./client.js"></script>
