--- a/coach.html
+++ b/coach.html
@@ -1,8 +1,16 @@
 <link rel="stylesheet" href="./styles.css" />
 <div id="viewContent">
     <div id="sidebar" class="sidebarAnimaton">
-        <div id="closeButton" onclick="setSidebarWidth()">
-            <img src="./assets/OriginalLogo-IncRED.png">
+        <div id="closeButton" class="sidebarAnimaton" onclick="setSidebarWidth()">
+            <!--<img src="assets/OriginalLogo-IncRED.png">-->
+        </div>
+        <div id="mapHolder" class="sidebarAnimaton">
+            <div class="map sidebarAnimaton" id="mapF1">
+                <h1>Floor 1</h1>
+            </div>
+            <div class="map sidebarAnimaton" id="mapF2">
+                <h1>Floor 2</h1>
+            </div>
         </div>
     </div>
     <div id="video"></div>
