--- a/coach.html
+++ b/coach.html
@@ -7,13 +7,18 @@
         <div id="mapHolder" class="sidebarAnimaton">
             <div class="map sidebarAnimaton" id="mapF1">
                 <h1>Floor 1</h1>
+                <div id="layoutF1" class="mapLayout"></div>
             </div>
             <div class="map sidebarAnimaton" id="mapF2">
                 <h1>Floor 2</h1>
+                <div id="layoutF2" class="mapLayout"></div>
             </div>
         </div>
     </div>
-    <div id="video"></div>
+    <div id="video">
+        <div id="videoJitsi"></div>
+        <div id="videoButtons"></div>
+    </div>
 </div>
 <script src='https://meet.jit.si/external_api.js'></script>
 <script type="text/javascript" src="./enums.js"></script>
