--- a/coach.html
+++ b/coach.html
@@ -6,11 +6,11 @@
         </div>
         <div id="mapHolder" class="sidebarAnimaton">
             <div class="map sidebarAnimaton" id="mapF1">
-                <h1>Floor 1</h1>
+                <h1>Floor 1</h1><div class="mapSwap" onclick="setMap('F2')"></div>
                 <div id="layoutF1" class="mapLayout"></div>
             </div>
             <div class="map sidebarAnimaton" id="mapF2">
-                <h1>Floor 2</h1>
+                <h1>Floor 2</h1><div class="mapSwap" onclick="setMap('F1')"></div>
                 <div id="layoutF2" class="mapLayout"></div>
             </div>
         </div>
