--- a/coach.html
+++ b/coach.html
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="./styles.css" />
 <div id="viewContent">
+    <div id="loading">
+        <div id="loadingText">Connecting...</div>
+    </div>
     <div id="sidebar" class="sidebarAnimaton">
         <div id="closeButton" class="sidebarAnimaton" onclick="setSidebarWidth()">
             <!--<img src="assets/OriginalLogo-IncRED.png">-->
@@ -22,4 +25,4 @@
 </div>
 <script src='https://meet.jit.si/external_api.js'></script>
 <script type="text/javascript" src="./enums.js"></script>
-<script type="text/javascript" src="./client.js"></script>
+<script type="text/javascript" src="./coach.js"></script>
