--- a/participant.html
+++ b/participant.html
@@ -1,6 +1,25 @@
-<div>
-    <div>
-        <iframe src=></iframe>
+<link rel="stylesheet" href="./styles.css" />
+<div id="viewContentParticipant">
+    <div class="header">
+        <h1>HW Inc - Coach List</h1>
     </div>
-    <script type="text/javascript" src="./scripts.js"></script>
+    <div id="contentHolder">
+        <div id="listHolder">
+            <div id="resetFilter" onclick="filterCoaches('');">
+                <div>Clear Filter</div>
+            </div>
+            <div id="coachList">
+            </div>
+        </div>
+        <div id="coachInfoPanel" class="sidebarAnimaton">
+            <div id="coachName"></div>
+            <div id="coachBio">
+                <div id="coachPhoto"></div>
+                <div id="coachText"></div>
+            </div>
+            <div id="emailButton"></div>
+        </div>
+    </div>
 </div>
+<script type="text/javascript" src="./enums.js"></script>
+<script type="text/javascript" src="./participant.js"></script>
