--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <script type="text/javascript" src="./scripts.js"></script>
 
 <body>
+  <div id="setStorage" onclick="setName(prompt('Enter your name!'));">
+    Change Name
+  </div>
   <div class="content" id="contentView">
     <h1>Welcome! Please Log In</h1>
     <div>
