email + coach css

--- a/participant.html
+++ b/participant.html
@@ -17,7 +17,9 @@
                 <div id="coachPhoto"></div>
                 <div id="coachText"></div>
             </div>
-            <div id="emailButton"></div>
+            <div id="emailButton" onclick="requestCoach(prompt(panelOpened+' will be asked to join your room.\n(Optional) What do you need help with?'));">
+                Ask For Help
+            </div>
         </div>
     </div>
 </div>
