--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="./scripts.js"></script>
 
 <body>
-  <div id="setStorage" onclick="setName(prompt('Enter your name!'));">
+  <div id="setStorage" class="hoverable" onclick="setName(prompt('Enter your name!'));">
     Change Name
   </div>
   <div class="content" id="contentView">
