--- a/node/index.html
+++ b/node/index.html
@@ -22,7 +22,7 @@
         <div id="loading" onclick="setName(prompt('Enter this camera\'s Location!\n(check the GitHub for a chart of valid names)'));">
             <div id="loadingText">Connecting...</div>
         </div>
-        <div id="setStorage">
+        <div id="setStorage" class="hoverable">
             Change Location
         </div>
         <div id="videoLocation"></div>
