--- a/participant.html
+++ b/participant.html
@@ -5,7 +5,7 @@
     </div>
     <div id="contentHolder">
         <div id="listHolder">
-            <div id="resetFilter" onclick="filterCoaches('');">
+            <div id="resetFilter" class="hoverable" onclick="filterCoaches('');">
                 <div>Clear Filter</div>
             </div>
             <div id="coachList">
@@ -17,7 +17,7 @@
                 <div id="coachPhoto"></div>
                 <div id="coachText"></div>
             </div>
-            <div id="emailButton" onclick="requestCoach(prompt(panelOpened+' will be asked to join your room.\n(Optional) What do you need help with?'));">
+            <div id="emailButton" class="hoverable" onclick="requestCoach(prompt(panelOpened+' will be asked to join your room.\n(Optional) What do you need help with?'));">
                 Ask For Help
             </div>
         </div>
