--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="content" id="contentView">
     <div id="titleScreen">
       <div id="titleHeader">
-        <img src="assets/OriginalLogo-IncRED.png" class="hoverable"
+        <img src="./assets/OriginalLogo-IncRED.png" class="hoverable"
           onclick="window.open('https://inc.hw.com','_blank');">
         nc View
       </div>
