--- a/coach.html
+++ b/coach.html
@@ -9,10 +9,10 @@
         </div>
         <div id="mapHolder" class="sidebarAnimaton">
             <div class="map sidebarAnimaton" id="mapF1">
-                <h1>Floor 1</h1><div class="mapSwap" onclick="setMap('F2')"></div>
+                <h1>Floor 1</h1><div class="mapSwap hoverable" onclick="setMap('F2')"></div>
                 <div id="layoutF1" class="mapLayout"></div>
             </div>
-            <div class="map sidebarAnimaton hoverable" id="mapF2">
+            <div class="map sidebarAnimaton" id="mapF2">
                 <h1>Floor 2</h1><div class="mapSwap hoverable" onclick="setMap('F1')"></div>
                 <div id="layoutF2" class="mapLayout"></div>
             </div>
