socket io rewrite

--- a/node/index.html
+++ b/node/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
 </head>
 
-<script src='https://meet.jit.si/external_api.js'></script>
+<script src="https://cdn.socket.io/4.1.2/socket.io.min.js" crossorigin="anonymous"></script>
 
 <body>
     <div id="contentView">
