--- a/coach.html
+++ b/coach.html
@@ -23,6 +23,7 @@
         <div id="videoButtons"></div>
     </div>
 </div>
+<script src="https://cdn.socket.io/4.1.2/socket.io.min.js" crossorigin="anonymous"></script>
 <script src='https://meet.jit.si/external_api.js'></script>
 <script type="text/javascript" src="./enums.js"></script>
 <script type="text/javascript" src="./coach.js"></script>
