--- a/participant.html
+++ b/participant.html
@@ -23,5 +23,6 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.socket.io/4.1.2/socket.io.min.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="./enums.js"></script>
 <script type="text/javascript" src="./participant.js"></script>
