--- a/node/index.html
+++ b/node/index.html
@@ -22,13 +22,14 @@
         <div id="loading">
             <div id="loadingText">Connecting...</div>
         </div>
-        <div id="setStorage" class="hoverable" onclick="setLocation(prompt('Enter this camera\'s Location!\n(check the GitHub for a chart of valid names)'));">
+        <div id="setStorage" class="hoverable"
+            onclick="setLocation(prompt('Enter this camera\'s Location!\n(check the GitHub for a chart of valid names)'));">
             Change Location
         </div>
         <div id="videoLocation"></div>
     </div>
+    <script type="text/javascript" src="../enums.js"></script>
+    <script type="text/javascript" src="./node.js"></script>
 </body>
-<script type="text/javascript" src="../enums.js"></script>
-<script type="text/javascript" src="./node.js"></script>
 
 </html>
