--- a/participant.html
+++ b/participant.html
@@ -15,7 +15,7 @@
             <div id="coachName"></div>
             <div id="coachBio">
                 <div id="coachPhoto"></div>
-                <div id="coachText"></div>
+                <!--<div id="coachText"></div>-->
             </div>
             <div id="emailButton" class="hoverable" onclick="requestCoach(prompt(panelOpened+' will be asked to join your room.\n(Optional) What do you need help with?'));">
                 Ask For Help
